--- a/holoview-matplotlib-png.ipynb
+++ b/holoview-matplotlib-png.ipynb
@@ -1626,7 +1626,7 @@
     "import numpy as np\n",
     "\n",
     "hv.extension(\"matplotlib\")\n",
-    "hv.output(fig='png')"
+    "hv.output(fig=\"png\")"
    ]
   },
   {
@@ -1674,14 +1674,6 @@
   }
  ],
  "metadata": {
-  "jupytext": {
-   "text_representation": {
-    "extension": ".py",
-    "format_name": "percent",
-    "format_version": "1.3",
-    "jupytext_version": "1.13.1"
-   }
-  },
   "kernelspec": {
    "display_name": "all39-defaults",
    "language": "python",
